# lsall

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  ext_emoji.json  install  install_sh
include/: lsall.h
manual/: lsall.man
src/: Makefile  lsa.cpp  lsall.1  lsall.cpp  lsall.h  main.cpp  read_emojis.cpp  read_emojis.h
tests/: main.cpp  read_emojis.test.cpp  test.cpp  test_demostatus.cpp
